// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Apps Page Render an Apps 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "left": 0,
        "overflow": "auto",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        className="content"
      >
        <div
          style={
            Object {
              "backgroundImage": "linear-gradient(90deg, #006298, #0085AD)",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundImage": "linear-gradient(90deg, #006298, #0085AD)",
                "flexBasis": "100%",
                "width": "100%",
              }
            }
          >
            <ul>
              <li
                className="title"
              >
                <span>
                  My Applications
                </span>
              </li>
            </ul>
            <style
              jsx={true}
            >
              
      * {
        margin: 0;
        padding: 0;
      }
      div {
        display: flex;
        font-family: PT Sans Caption;
        justify-content: center;
        padding: 0.7em 0;
      }
      div ul {
        display: flex;
        flex-wrap: wrap;
        align-items: stretch;
        list-style-type: none;
        max-width: 85%;
        width: 100%;
      }
      div ul li {
        width: 100%;
      }
      .title {
        width: 20%;
        min-width: 50px;
        color: white;
        font-size: 1.8em;
        text-align: left;
      }
      .desc {
        width: 75%;
        min-width: 50px;
        padding-bottom: 15px;
        color: #ebebeb;
        font-size: 1.5em;
        font-weight: 100;
        text-align: left;
      }
      .download {
        margin-left: auto;
        margin-top: auto;
      }
    
            </style>
          </div>
        </div>
        <div
          className="apps"
        >
          <div
            className="container"
          >
            <div
              className="title"
            >
              <span>
                Score Guides
              </span>
            </div>
            <div
              className="linkImg"
            >
              <img
                alt="Score Guides"
                src="test-file-stub"
              />
            </div>
            <div
              className="desc"
            >
              Score Guides explanation...
            </div>
            <div>
              <a
                aria-label="Link"
                href=""
              >
                <div
                  className="container"
                >
                  <span>
                    Visit Score Guides Page
                  </span>
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <line
                      x1="5"
                      x2="19"
                      y1="12"
                      y2="12"
                    />
                    <polyline
                      points="12 5 19 12 12 19"
                    />
                  </svg>
                </div>
                <style
                  jsx={true}
                >
                  
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none !important;
        color: #ebebeb;
      }
      a:hover {
        text-shadow: 2px 2px #63666A;
        font-size: 102%;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
        padding-left: 10px;
        padding-right: 10px;
      }
      a div span {
        padding-right: 10px;
        font-size: 0.9em;
      }
    
                </style>
              </a>
            </div>
            <style
              jsx={true}
            >
              
      * {
        margin: 0;
        padding: 0;
      }
      div {
        padding: 4px;
      }
      .container {
        text-align: center;
        max-width: 450px;
      }
      .title span {
        color: #0085AD;
        font-size: 25px;
        font-weight: 500;
      }
      .linkImg {
        padding: 0;
        border: 1px solid;
        height: 220px;
      }
      .linkImg img {
        width: 100%;
        height: 100%;
      }
      .desc {
        text-align: justify;
        font-size: 0.8em;
      }
    
            </style>
          </div>
          <div
            className="container"
          >
            <div
              className="title"
            >
              <span>
                Digital Library
              </span>
            </div>
            <div
              className="linkImg"
            >
              <img
                alt="Digital Library"
                src="test-file-stub"
              />
            </div>
            <div
              className="desc"
            >
              Digital Library explanation...
            </div>
            <div>
              <a
                aria-label="Link"
                href=""
              >
                <div
                  className="container"
                >
                  <span>
                    Visit Digital Library
                  </span>
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <line
                      x1="5"
                      x2="19"
                      y1="12"
                      y2="12"
                    />
                    <polyline
                      points="12 5 19 12 12 19"
                    />
                  </svg>
                </div>
                <style
                  jsx={true}
                >
                  
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none !important;
        color: #ebebeb;
      }
      a:hover {
        text-shadow: 2px 2px #63666A;
        font-size: 102%;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
        padding-left: 10px;
        padding-right: 10px;
      }
      a div span {
        padding-right: 10px;
        font-size: 0.9em;
      }
    
                </style>
              </a>
            </div>
            <style
              jsx={true}
            >
              
      * {
        margin: 0;
        padding: 0;
      }
      div {
        padding: 4px;
      }
      .container {
        text-align: center;
        max-width: 450px;
      }
      .title span {
        color: #0085AD;
        font-size: 25px;
        font-weight: 500;
      }
      .linkImg {
        padding: 0;
        border: 1px solid;
        height: 220px;
      }
      .linkImg img {
        width: 100%;
        height: 100%;
      }
      .desc {
        text-align: justify;
        font-size: 0.8em;
      }
    
            </style>
          </div>
          <div
            className="container"
          >
            <div
              className="title"
            >
              <span>
                Practice Tests
              </span>
            </div>
            <div
              className="linkImg"
            >
              <img
                alt="Practice Tests"
                src="test-file-stub"
              />
            </div>
            <div
              className="desc"
            >
              Practice Tests explanation...
            </div>
            <div>
              <a
                aria-label="Link"
                href=""
              >
                <div
                  className="container"
                >
                  <span>
                    Visit Practice Tests Page
                  </span>
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <line
                      x1="5"
                      x2="19"
                      y1="12"
                      y2="12"
                    />
                    <polyline
                      points="12 5 19 12 12 19"
                    />
                  </svg>
                </div>
                <style
                  jsx={true}
                >
                  
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none !important;
        color: #ebebeb;
      }
      a:hover {
        text-shadow: 2px 2px #63666A;
        font-size: 102%;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
        padding-left: 10px;
        padding-right: 10px;
      }
      a div span {
        padding-right: 10px;
        font-size: 0.9em;
      }
    
                </style>
              </a>
            </div>
            <style
              jsx={true}
            >
              
      * {
        margin: 0;
        padding: 0;
      }
      div {
        padding: 4px;
      }
      .container {
        text-align: center;
        max-width: 450px;
      }
      .title span {
        color: #0085AD;
        font-size: 25px;
        font-weight: 500;
      }
      .linkImg {
        padding: 0;
        border: 1px solid;
        height: 220px;
      }
      .linkImg img {
        width: 100%;
        height: 100%;
      }
      .desc {
        text-align: justify;
        font-size: 0.8em;
      }
    
            </style>
          </div>
          <div
            className="container"
          >
            <div
              className="title"
            >
              <span>
                Sample Items
              </span>
            </div>
            <div
              className="linkImg"
            >
              <img
                alt="Sample Items"
                src="test-file-stub"
              />
            </div>
            <div
              className="desc"
            >
              Sample Items explanation...
            </div>
            <div>
              <a
                aria-label="Link"
                href=""
              >
                <div
                  className="container"
                >
                  <span>
                    Visit Sample Items Website
                  </span>
                  <svg
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <line
                      x1="5"
                      x2="19"
                      y1="12"
                      y2="12"
                    />
                    <polyline
                      points="12 5 19 12 12 19"
                    />
                  </svg>
                </div>
                <style
                  jsx={true}
                >
                  
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none !important;
        color: #ebebeb;
      }
      a:hover {
        text-shadow: 2px 2px #63666A;
        font-size: 102%;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
        padding-left: 10px;
        padding-right: 10px;
      }
      a div span {
        padding-right: 10px;
        font-size: 0.9em;
      }
    
                </style>
              </a>
            </div>
            <style
              jsx={true}
            >
              
      * {
        margin: 0;
        padding: 0;
      }
      div {
        padding: 4px;
      }
      .container {
        text-align: center;
        max-width: 450px;
      }
      .title span {
        color: #0085AD;
        font-size: 25px;
        font-weight: 500;
      }
      .linkImg {
        padding: 0;
        border: 1px solid;
        height: 220px;
      }
      .linkImg img {
        width: 100%;
        height: 100%;
      }
      .desc {
        text-align: justify;
        font-size: 0.8em;
      }
    
            </style>
          </div>
        </div>
      </div>
      <style
        jsx={true}
      >
        
      .content {
        width: 100%;
        // display: flex;
        // flex-direction: column;
        // justify-content: center;
        // align-items: center;
        // max-height: calc(100vh - 64px);
      }
      .apps {
        width: 960px;
        height: 620px;
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        align-items: center;
      }
    
      </style>
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps Page Render the Apps page 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    className="title-and-content"
  >
    <div>
      <div
        className="title-bar"
      >
        <div
          className="page-content width-enforcer"
        >
          <h1>
            My Resources
          </h1>
          <style
            jsx={true}
          >
            
      .width-enforcer {
        margin: 0 auto;
        max-width: 1024px;
      }

      @media (max-width: 1024px) {
        .width-enforcer {
          margin: 0 20px;
        }
      }
    
          </style>
        </div>
        <style
          jsx={true}
        >
          
      .title-bar {
        background-image: linear-gradient(90deg, #006298, #0085AD);
        color: #ffffff;
      }

      h1 {
        font-weight: normal;
        padding: 7px 0;
        margin: 0;
      }
    
        </style>
      </div>
    </div>
    <div
      className="content undefined"
      id="main-content-scroll"
    >
      <div
        className="page-content width-enforcer"
      >
        <div
          className="content"
        >
          <div
            className="apps"
          >
            <div
              className="container"
            >
              <div
                className="title"
              >
                <span>
                  Score Guides
                </span>
              </div>
              <div
                className="linkImg"
              >
                <a
                  href="http://www.smarterbalanced.org/assessments/practice-and-training-tests/resources-and-documentation/#tab-3"
                >
                  <img
                    alt="Score Guides"
                    src="test-file-stub"
                  />
                </a>
              </div>
              <div
                className="desc"
              >
                Practice Test Scoring Guides for grades 3-12 in Math and English Language Arts.
              </div>
              <div>
                <a
                  aria-label="Link"
                  href="http://www.smarterbalanced.org/assessments/practice-and-training-tests/resources-and-documentation/#tab-3"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <div
                    className="container"
                  >
                    <span>
                      Visit Score Guides Page
                    </span>
                    <svg
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="5"
                        x2="19"
                        y1="12"
                        y2="12"
                      />
                      <polyline
                        points="12 5 19 12 12 19"
                      />
                    </svg>
                  </div>
                  <style
                    jsx={true}
                  >
                    
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none;
        color: #ebebeb;
      }
      a:hover {
        text-decoration: underline;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
        padding-left: 10px;
        padding-right: 10px;
      }
      .container:hover {
        background: linear-gradient(90deg, #004266, #006298);
      }
      a div span {
        padding-right: 10px;
        font-size: 0.9em;
      }
    
                  </style>
                </a>
              </div>
              <style
                jsx={true}
              >
                
      * {
        margin: 0;
        padding: 0;
      }
      div {
        padding: 4px;
      }
      .container {
        text-align: center;
        max-width: 450px;
      }
      .title span {
        color: #0085AD;
        font-size: 25px;
        font-weight: 500;
      }
      .linkImg {
        padding: 0;
        border: 1px solid;
        height: 220px;
      }
      .linkImg img {
        width: 100%;
        height: 100%;
      }
      .desc {
        text-align: justify;
        font-size: 0.8em;
        height: 80px;
      }
    
              </style>
            </div>
            <div
              className="container"
            >
              <div
                className="title"
              >
                <span>
                  Digital Library
                </span>
              </div>
              <div
                className="linkImg"
              >
                <a
                  href="https://sbdigitallibrary.org/"
                >
                  <img
                    alt="Digital Library"
                    src="test-file-stub"
                  />
                </a>
              </div>
              <div
                className="desc"
              >
                The Digital Library contains classroom activities, lessons, and professional development resources to help you enhance instruction and support learning.
              </div>
              <div>
                <a
                  aria-label="Link"
                  href="https://sbdigitallibrary.org/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <div
                    className="container"
                  >
                    <span>
                      Visit Digital Library
                    </span>
                    <svg
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="5"
                        x2="19"
                        y1="12"
                        y2="12"
                      />
                      <polyline
                        points="12 5 19 12 12 19"
                      />
                    </svg>
                  </div>
                  <style
                    jsx={true}
                  >
                    
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none;
        color: #ebebeb;
      }
      a:hover {
        text-decoration: underline;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
        padding-left: 10px;
        padding-right: 10px;
      }
      .container:hover {
        background: linear-gradient(90deg, #004266, #006298);
      }
      a div span {
        padding-right: 10px;
        font-size: 0.9em;
      }
    
                  </style>
                </a>
              </div>
              <style
                jsx={true}
              >
                
      * {
        margin: 0;
        padding: 0;
      }
      div {
        padding: 4px;
      }
      .container {
        text-align: center;
        max-width: 450px;
      }
      .title span {
        color: #0085AD;
        font-size: 25px;
        font-weight: 500;
      }
      .linkImg {
        padding: 0;
        border: 1px solid;
        height: 220px;
      }
      .linkImg img {
        width: 100%;
        height: 100%;
      }
      .desc {
        text-align: justify;
        font-size: 0.8em;
        height: 80px;
      }
    
              </style>
            </div>
            <div
              className="container"
            >
              <div
                className="title"
              >
                <span>
                  Practice Tests
                </span>
              </div>
              <div
                className="linkImg"
              >
                <a
                  href="http://www.smarterbalanced.org/assessments/samples/"
                >
                  <img
                    alt="Practice Tests"
                    src="test-file-stub"
                  />
                </a>
              </div>
              <div
                className="desc"
              >
                Use the same testing software as students to see what they encounter during testing! Try out an English language arts or math test to learn how the test works, what’s expected of students and what kind of questions are included on them.
              </div>
              <div>
                <a
                  aria-label="Link"
                  href="http://www.smarterbalanced.org/assessments/samples/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <div
                    className="container"
                  >
                    <span>
                      Visit Practice Tests Page
                    </span>
                    <svg
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="5"
                        x2="19"
                        y1="12"
                        y2="12"
                      />
                      <polyline
                        points="12 5 19 12 12 19"
                      />
                    </svg>
                  </div>
                  <style
                    jsx={true}
                  >
                    
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none;
        color: #ebebeb;
      }
      a:hover {
        text-decoration: underline;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
        padding-left: 10px;
        padding-right: 10px;
      }
      .container:hover {
        background: linear-gradient(90deg, #004266, #006298);
      }
      a div span {
        padding-right: 10px;
        font-size: 0.9em;
      }
    
                  </style>
                </a>
              </div>
              <style
                jsx={true}
              >
                
      * {
        margin: 0;
        padding: 0;
      }
      div {
        padding: 4px;
      }
      .container {
        text-align: center;
        max-width: 450px;
      }
      .title span {
        color: #0085AD;
        font-size: 25px;
        font-weight: 500;
      }
      .linkImg {
        padding: 0;
        border: 1px solid;
        height: 220px;
      }
      .linkImg img {
        width: 100%;
        height: 100%;
      }
      .desc {
        text-align: justify;
        font-size: 0.8em;
        height: 80px;
      }
    
              </style>
            </div>
            <div
              className="container"
            >
              <div
                className="title"
              >
                <span>
                  Sample Items
                </span>
              </div>
              <div
                className="linkImg"
              >
                <a
                  href="http://sampleitems.smarterbalanced.org/"
                >
                  <img
                    alt="Sample Items"
                    src="test-file-stub"
                  />
                </a>
              </div>
              <div
                className="desc"
              >
                This site provides examples of test questions used on Smarter Balanced assessments in English language arts / literacy and math. Teachers, parents, students, administrators, and policymakers can experience these test items just as students encounter them.
              </div>
              <div>
                <a
                  aria-label="Link"
                  href="http://sampleitems.smarterbalanced.org/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <div
                    className="container"
                  >
                    <span>
                      Visit Sample Items Website
                    </span>
                    <svg
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="5"
                        x2="19"
                        y1="12"
                        y2="12"
                      />
                      <polyline
                        points="12 5 19 12 12 19"
                      />
                    </svg>
                  </div>
                  <style
                    jsx={true}
                  >
                    
      * {
        margin: 0;
        padding: 0;
      }
      a {
        text-decoration: none;
        color: #ebebeb;
      }
      a:hover {
        text-decoration: underline;
      }
      .container {
        display: inline-flex;
        min-height: 35px;
        border-radius: 5px;
        background-image: linear-gradient(90deg, #006298, #0085AD);
        align-items: center;
        justify-content: center;
        width: 230px;
        padding-left: 10px;
        padding-right: 10px;
      }
      .container:hover {
        background: linear-gradient(90deg, #004266, #006298);
      }
      a div span {
        padding-right: 10px;
        font-size: 0.9em;
      }
    
                  </style>
                </a>
              </div>
              <style
                jsx={true}
              >
                
      * {
        margin: 0;
        padding: 0;
      }
      div {
        padding: 4px;
      }
      .container {
        text-align: center;
        max-width: 450px;
      }
      .title span {
        color: #0085AD;
        font-size: 25px;
        font-weight: 500;
      }
      .linkImg {
        padding: 0;
        border: 1px solid;
        height: 220px;
      }
      .linkImg img {
        width: 100%;
        height: 100%;
      }
      .desc {
        text-align: justify;
        font-size: 0.8em;
        height: 80px;
      }
    
              </style>
            </div>
          </div>
        </div>
        <style
          jsx={true}
        >
          
      .content {
        display: flex;
        flex-direction: column;
        align-items: center;
      }
      .apps {
        height: 620px;
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
      }
    
        </style>
        <style
          jsx={true}
        >
          
      .width-enforcer {
        margin: 20px auto;
        max-width: 1024px;
      }

      @media (max-width: 1024px) {
        .width-enforcer {
          margin: 20px 20px;
        }
      }
    
        </style>
      </div>
    </div>
  </div>
  <style
    jsx={true}
  >
    
        .title-and-content {
          flex-grow: 1;
          display: flex;
          flex-direction: column;
        }

        .content {
          overflow-y: auto;
          -webkit-overflow-scrolling: touch;
          flex-grow: 1;
        }
      
  </style>
</div>
`;
